--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 		<div>you're logged in BITCHZZ</div>
 		<a href="logout.php">Log out</a>
 {% else %}
-		<form id="loginForm" method="POST" action="index.php">
+		<form id="loginForm" method="POST" action="login.php">
 			Username:<input type="text" name="username"/>
 			Password:<input type="password" name="password" />
 			<input type="submit" name="login"value="Log in" />
