--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,43 +3,22 @@
 {% block title 'Home' %}
 
 {% block main %}
-{% if loggedin %}
-	<div id="quizzes">
-		<h3>My Quizzes</h3>
-{% if quizzes is empty %}
-		<strong>Y u no create quizzes?!</strong><br />
-		<img src="images/pearcat.jpg" />
-{% else %}
-		<ul>
-{% for quiz in quizzes %}
-			<li>{{ quiz.title }}
-				<a href="edit.php?id={{ quiz.id }}" />Edit</a>
-				<a href="delete.php?id={{ quiz.id }}" />Delete</a>
-				<a href="statistics.php?id={{ quiz.id }}" />Statistics</a>
-			</li>
-{% endfor %}
-		</ul>
-{% endif %}
-	</div>
-{% else %}
-	<div id="info">
-	<h2>Les Quizerables the best way to make questionnaires on the interwebs.</h2>
-	<img src="images/orangecat.jpg" /><br />
-	<h3>Statistics</h3>
-	Registered users: {{ statistics.users }}
-	Total questionnaires: {{ statistics.naires }}<br />
-	Total questions: {{ statistics.quests }}<br />
-	Total answers: {{ statistics.answers }}
-	</div>
-	<div id"register">
-		<h3>Sign Up</h3>
-		<form id="registerForm" method="POST" action="index.php">
-			Username:<input type="text" name="username"/><br />
-			E-mail:<input type="text" name="email" /><br />
-			Password:<input type="password" name="password" /><br />
-			<input type="submit" name="signup"value="Sign Up" />
-		</form>
-	</div>
-{% endif %}
-
+		<div id="info">
+		<h2>Les Quizerables the best way to make questionnaires on the interwebs.</h2>
+		<img src="images/orangecat.jpg" /><br />
+		<h3>Statistics</h3>
+		Registered users: {{ statistics.users }}<br />
+		Total questionnaires: {{ statistics.naires }}<br />
+		Total questions: {{ statistics.quests }}<br />
+		Total answers: {{ statistics.answers }}
+		</div>
+		<div id"register">
+			<h3>Sign Up</h3>
+			<form id="registerForm" method="POST" action="signup.php">
+				Username:<input type="text" name="username"/><br />
+				E-mail:<input type="text" name="email" /><br />
+				Password:<input type="password" name="password" /><br />
+				<input type="submit" name="signup"value="Sign Up" />
+			</form>
+		</div>
 {% endblock %}
