--- a/app/templates/editQuiz.html
+++ b/app/templates/editQuiz.html
@@ -1,23 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title quiz.title %}
+{% block title 'Edit Quiz' %}
 
 {% block main %}
 		<form id="quizForm" method="POST" action="submitQuiz.php">
 			<div id="quizDetails">
-				Title:<input type="text" name="title" /><br />
-				Description:<input type="text" name="description"/><br />
+				<input id="id" type="hidden" name="id" value="{{ quiz.id }}" />
+				Title:<input id="title" type="text" name="title" value="{{ quiz.title }}" /><br />
+				Description:<input id="description" type="text" name="description" value="{{ quiz.description }}"/><br />
 			</div>
 			<div id="questions">
-{% for question in questions %}
-				<div class="question">
-					Question:<input type="text" name="question{{ question.id %}" /><br />
-					Required:<input type="checkbox" name="required{{ question.id %}" /><br />
-					<input type="button" value="Delete" />
-				</div>
-{% end for %}
+				<div id="loading">Loading questions</div>
 			</div>
-			<input type="button" value="Add new question" />
-			<input type="submit" value="Submit" />
+			<input type="button" id="newQuestion" value="Add Question" />
 			<input type="button" value="Preview Quiz" />
 		</form>
+{% endblock %}
