--- a/app/templates/quizs.html
+++ b/app/templates/quizs.html
@@ -3,28 +3,47 @@
 {% block title 'Home' %}
 
 {% block main %}
-		<h3>Create Quiz</h3>
-		<div>
-			Title:<input id="title" type="text" name="title" value="{{ quiz.title }}" />
-			<input type="submit" value="Create" id="create" />
+		<div id="quizContainer">
+			<div id="quizHeader">
+				<h3>My Quizzes</h3>
+				<form id="quizHeaderForm">
+					Title:<input id="createTitle" type="text" name="title" />
+					<input type="button" value="Create" id="create" />
+				</form>
+			</div>
+			<div id="quizs">
+				<div id="loadingMessage">Loading your quizzes</div>
+			</div>
 		</div>
-		<h3>My Quizzes</h3>
-		<div id="quizs">
+		<div id="userProfile">
+			<h3>My Profile</h3>
+			<table>
+				<tr>
+					<td>Username</td>
+					<td>{{ user.name }}</td>
+				</tr>
+				<tr>
+					<td>Email</td>
+					<td>{{ user.email }}</td>
+				</tr>
+			</table>
+			<input type="button" value="Edit Profile" id="profile" />
 		</div>
-			
-{% if quizs is empty %}
-			<strong>Y u no create quizzess?!</strong><br />
-			<img src="images/pearcat.jpg" />
-{% else %}
-			<ul>
-{% for quiz in quizs %}
-				<li>{{ quiz.title }}
-					<a href="editQuiz.php?id={{ quiz.id }}" />Edit</a>
-					<a href="editQuiz.php?id={{ quiz.id }}" />Delete</a>
-					<a href="statistics.php?id={{ quiz.id }}" />Statistics</a>
-				</li>
-{% endfor %}
-			</ul>
-{% endif %}
+		<div id="statistics">
+			<h3>My Statistics</h3>
+			<table>
+				<tr>
+					<td>Total Quizes</td>
+					<td>{{ statistics.quizs }}</td>
+				</tr>
+				<tr>
+					<td>Total Questions</td>
+					<td>{{ statistics.questions }}</td>
+				</tr>
+				<tr>
+					<td>Total Answers</td>
+					<td>{{ statistics.answers }}</td>
+				</tr>
+			</table>
 		</div>
 {% endblock %}
