statistics show values

--- a/app/lib/view/home.html
+++ b/app/lib/view/home.html
@@ -8,8 +8,8 @@
 			<img src="images/orangecat.jpg" /><br />
 			<h3>Statistics</h3>
 			Registered users: {{ statistics.users }}<br />
-			Total questionnaires: {{ statistics.naires }}<br />
-			Total questions: {{ statistics.quests }}<br />
+			Total questionnaires: {{ statistics.quizs }}<br />
+			Total questions: {{ statistics.questions }}<br />
 			Total answers: {{ statistics.answers }}
 		</div>
 		<div id"register">
