added user control panel

--- a/app/lib/view/createQuiz.html
+++ b/app/lib/view/createQuiz.html
@@ -27,7 +27,7 @@
 					<td>{{ user.email }}</td>
 				</tr>
 			</table>
-			<input type="button" value="Edit Profile" id="profile" />
+			<input type="button" value="Edit Profile" id="profile" onclick="window.location.href='user.php'" />
 		</div>
 		<div id="statistics">
 			<h3>My Statistics</h3>
