more styling and added jquery watermark plugin

--- a/app/lib/view/createQuiz.html
+++ b/app/lib/view/createQuiz.html
@@ -7,7 +7,7 @@
 			<div id="quizHeader">
 				<h3>My Quizzes</h3>
 				<form id="quizHeaderForm">
-					Title:<input id="createTitle" type="text" name="title" />
+					<input id="createTitle" type="text" name="title" />
 					<input type="button" value="Create" id="create" />
 				</form>
 			</div>
