--- a/app/lib/view/loginForm.html
+++ b/app/lib/view/loginForm.html
@@ -1,5 +1,13 @@
 		<form id="loginForm" method="POST" action="login.php">
-			Username:<input type="text" name="username" {% if login.username %}value="{{ login.username }}" {% endif %}/>
-			Password:<input type="password" name="password" />
-			<input type="submit" name="login"value="Log in" />
+			<table>
+				<tr>
+					<td>Username</td>
+					<td>Password</td>
+				</tr>
+				<tr>
+					<td><input type="text" name="username" {% if login.username %}value="{{ login.username }}" {% endif %}/></td>
+					<td><input type="password" name="password" /></td>
+					<td><input type="submit" name="login"value="Log in" /></td>
+				</tr>
+			</table>
 		</form>
