fixed register styling

--- a/app/lib/view/home.html
+++ b/app/lib/view/home.html
@@ -8,13 +8,8 @@
 
 		</div>
 		<div id="register">
-			<h3>Sign Up</h3>
-			<form id="registerForm" method="POST" action="register.php">
-				Username:<input type="text" name="username"/><br />
-				E-mail:<input type="text" name="email" /><br />
-				Password:<input type="password" name="password" /><br />
-				<input type="submit" name="signup"value="Sign Up" />
-			</form>
+			<h3>Register</h3>
+{% include 'registerForm.html' %}
 		</div>
 		<div id="statistics">
 			<h3>Statistics</h3>
