--- a/app/lib/view/register.html
+++ b/app/lib/view/register.html
@@ -3,7 +3,7 @@
 {% block title 'Login' %}
 
 {% block main %}
-		<div id="register">
+		<div>
 			<h3>Register</h3>
 {% include 'errors.html' %}
 {% include 'registerForm.html' %}
