user control form tabled to align inputs

--- a/app/lib/view/user.html
+++ b/app/lib/view/user.html
@@ -6,13 +6,33 @@
 		<div id="user">
 			<h3>User Control</h3>
 {% include 'errors.html' %}
-			<form id="userForm" method="POST" action="user.php">
+			<form id="userForm" method="post" action="user.php">
 				<div style="display:none;"><input type="hidden" id="csrf" name="csrf" value="{{ csrf }}" /></div>
-				Username:<input type="text" id="username" name="username" value="{% if useredit.username %}{{ useredit.username }}{% else %}{{ user.name }}{% endif %}" /><br />
-				Email:<input type="text" id="email" name="email" value="{% if useredit.email %}{{ useredit.email }}{% else %}{{ user.email }}{% endif %}" /><br />
-				New Password:<input type="password" id="newPassword" name="newPassword" {% if useredit.newPassword %}value="{{ useredit.newPassword }}"{% endif %} /><br /><br />
-				Current Password:<input type="password" id="password" name="password" /><br />
-				<input type="submit" id="submit" name="submit" value="Submit" />
+				<table>
+					<tr>
+						<td>Username</td>
+						<td><input type="text" id="username" name="username" value="{% if useredit.username %}{{ useredit.username }}{% else %}{{ user.name }}{% endif %}" /></td>
+					</tr>
+					<tr>
+						<td>E-mail</td>
+						<td><input type="text" id="email" name="email" value="{% if useredit.email %}{{ useredit.email }}{% else %}{{ user.email }}{% endif %}" /></td>
+					</tr>
+					<tr>
+						<td>Change Password</td>
+						<td><input type="password" id="newPassword" name="newPassword" {% if useredit.newPassword %}value="{{ useredit.newPassword }}"{% endif %} /></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td>Current Password</td>
+						<td><input type="password" id="password" name="password" /></td>
+					</tr>
+					<tr>
+						<td><input type="submit" id="submit" name="submit" value="Submit" /></td>
+					</tr>
+				</table>
 			</form>
 		</div>
 {% endblock %}
