--- a/app/styles/quiz/2.css
+++ b/app/styles/quiz/2.css
@@ -1,3 +1,11 @@
 body {
-    background-color: #B58900;
+    background: black;
+}
+
+#wrapper {
+	background: white;
+}
+
+footer {
+	color: white;
 }
