--- a/app/lib/view/registerForm.html
+++ b/app/lib/view/registerForm.html
@@ -1,4 +1,4 @@
-			<form id="registerForm" method="POST" action="register.php">
+			<form id="registerForm" method="post" action="register.php">
 				<table>
 					<tr>
 						<td>Username:</td>
@@ -13,7 +13,8 @@
 						<td><input type="password" name="password" /></td>
 					</tr>
 					<tr>
-						<td><input type="submit" name="signup"value="Sign Up" /></td>
+						<td>&nbsp;</td>
+						<td><input type="submit" name="signup" value="Sign Up" /></td>
 					</tr>
 				</table>
 			</form>
