--- a/app/lib/view/loginForm.html
+++ b/app/lib/view/loginForm.html
@@ -1,13 +1,14 @@
-		<form id="loginForm" method="POST" action="login.php">
+		<form id="loginForm" method="post" action="login.php">
 			<table>
 				<tr>
 					<td>Username</td>
 					<td>Password</td>
+					<td>&nbsp;</td>
 				</tr>
 				<tr>
 					<td><input type="text" name="username" {% if login.username %}value="{{ login.username }}" {% endif %}/></td>
 					<td><input type="password" name="password" /></td>
-					<td><input type="submit" name="login"value="Log in" /></td>
+					<td><input type="submit" name="login" value="Log in" /></td>
 				</tr>
 			</table>
 		</form>
