do quiz saves answers

--- a/app/lib/view/doQuizDone.html
+++ b/app/lib/view/doQuizDone.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Thank you - Les Quizerables</title>
-</head>
-<body>
-	<header>
-		<h1>Thank you</h1>
-	</header>
-	<p>Your answers have been recorded, thank you for filling in this questionnaire</p>
-	</form>
-	<footer>
-		<strong>Les Quizerables (C) 2012</strong>
-	</footer>
-</body>
-</html>
+{% extends 'baseDoQuiz.html' %}
+
+{% block main %}
+<h2>Thank you</h2>
+<p>Your answers have been recorded, thank you for filling in this questionnaire</p>
+{% endblock %}
