--- a/app/lib/view/doQuiz.html
+++ b/app/lib/view/doQuiz.html
@@ -1,39 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{% if quiz is not empty %}{{ quiz.title }}{% else %}Quiz Not Found{% endif %} - Les Quizerables</title>
-    <link rel="stylesheet" href="styles/quiz/base.css">
-    {% if quiz is not empty and quiz.theme_id > 0 %}<link rel="stylesheet" href="styles/quiz/{{ quiz.theme_id }}.css">{% endif %}
-</head>
-<body>
-{% if quiz is not empty %}
-	<div id="wrapper">
-	    <header>
-		<h1>{{ quiz.title }}</h1>
-		<p>{{ quiz.description }}</p>
-	    </header>
-{% if questions is not empty %}
-	    <form action='doQuiz.php' method='post'>
-{% for question in questions %}
-		<h3>{{ question.text }}</h3>
-		<input type='text' name='{{ question.id }}' />
+{% extends 'baseDoQuiz.html' %}
+
+{% block head %}
+{% for script in scripts %}
+	<script src="scripts/{{ script }}" type="text/javascript"></script>	
 {% endfor %}
-		<br />
-		<input type='submit' name='submit' value='Submit' />
-	    </form>
-	</div>
+{% endblock %}
+
+{% block main %}
+			<p>{{ quiz.description }}</p>
+			<p id="required" class="requiredmark">*Required</p>
+{% include 'errors.html' %}
+{% if questions is not empty %}
+		<form action="doQuiz.php?id={{ quiz.id }}" method="post" id="doQuizForm">
+{% for question in questions %}
+			<div class="question">
+				<h3>{{ question.text }}{% if question.required %} <span class="requiredmark">*</span>{% endif %}</h3>
+				<input type="hidden" id="question{{ question.id }}" name="questions[]" value="{{ question.id }}" />
+				<input type="text" id="answer{{ question.id }}" name="answers[]" {% if question.required %}class="required" {% endif %}/>
+			</div>
+{% endfor %}
+			<input type="submit" name="submit" value="Submit" />
+		</form>
 {% else %}
-	    <p>There are no questions to answer in this quiz.</p>
+		<p>There are no questions to answer in this quiz.</p>
 {% endif %}
-{% else %}
-    <header>
-    <h1>quiz Not Found</h1>
-        <p>404 no quiz found. But here's a picture of an orange ...</p>
-        <p><img src="images/orange.jpg" alt="orange" /></p>
-    </header>
-{% endif %}
-    <footer>
-        <strong>Les Quizerables (C) 2012</strong>
-    </footer>
-</body>
-</html>
+{% endblock %}
