--- a/app/styles/quiz/base.css
+++ b/app/styles/quiz/base.css
@@ -16,7 +16,16 @@ h1 {
 
 p, h3, input {
 	margin: 10px 0;
+}
 
+.requiredmark {
+	color: red;
+}
+
+label.error { float: none; color: red; padding-left: .5em; }
+
+#required {
+	font-size: 80%;
 }
 
 [type='submit'] {
@@ -25,7 +34,7 @@ p, h3, input {
 	margin: 10px 50px;
 }
 
-footer {
+#footer {
 	text-align: center;
 	margin-top: 20px;
 }
