pear cat on homepage

--- a/app/lib/view/home.html
+++ b/app/lib/view/home.html
@@ -5,7 +5,7 @@
 {% block main %}
 		<div id="info">
 			<h2>Les Quizerables the best way to make questionnaires on the interwebs.</h2>
-
+			<img src="images/pearcat.jpg" style="width: 75%; height: 75%;" alt="Welcome" title="Welcome" />
 		</div>
 		<div id="register">
 			<h3>Register</h3>
