added theme dropdown in edit quiz page

--- a/app/lib/view/editQuiz.html
+++ b/app/lib/view/editQuiz.html
@@ -16,6 +16,19 @@
 						<td>Description:</td>
 						<td><input id="description" type="text" name="description" value="{{ quiz.description }}" /></td>
 					</tr>
+					<tr>
+						<td>Theme:</td>
+						<td>
+							<select id="theme_id" name="theme_id">
+								<option value="1">Standard</option>
+								<option value="2">Inverse</option>
+								<option value="3">Contrast</option>
+								<option value="4">Halloween</option>
+								<option value="5">CATZ</option>
+							</select>
+						</td>
+					</tr>
+					
 				</table>
 			</div>
 			<div id="questions">
